features community blog and mobile layout bugfixes

--- a/src/components/pages/FeaturesPage/FeaturesPage.module.css
+++ b/src/components/pages/FeaturesPage/FeaturesPage.module.css
@@ -64,12 +64,12 @@
   .LowLatencyCard {
     background: url(./images/low-latency.svg), var(--yellow-5);
     background-repeat: no-repeat;
-    background-size: calc(100% - 1.5rem);
+    background-size: auto 4rem;
     background-position: left 1.5rem bottom 7rem;
   }
 
   .LowLatencyCardMainContent {
-    margin-bottom: 10rem;
+    margin-bottom: 7rem;
   }
 
   .LowLatencyCardUnderline{
@@ -164,8 +164,8 @@
   .LoadBalancingCard {
     background: url(./images//load-balancing-mobile.svg), var(--gray-6);
     background-repeat: no-repeat;
-    background-size: 85%;
-    background-position: center bottom 7rem;
+    background-size: auto 16rem;
+    background-position: center top 21rem;
   }
   
   .LoadBalancingCardMainContent {
