--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -68,6 +68,7 @@
 .blog-post-pagination-nav .pagination-nav__link--next .pagination-nav__sublabel, 
 .blog-post-pagination-nav .pagination-nav__link--prev .pagination-nav__sublabel{
     color: var(--white);
+    display: none;
 }
 
 .blog-post-pagination-nav-more{
@@ -77,6 +78,7 @@
 }
 
 .blog-post-pagination-nav-more a {
+    line-height: 1;
     display: inline-block;
     padding: 1rem;
     border: 1px solid var(--white);
@@ -109,5 +111,14 @@
         font-size: 2rem;
         font-weight: 400;
         line-height: 2.5rem;
+        position: relative;
+        top: -3rem;
+    }
+    .blog-post-pagination-nav .pagination-nav__link--next .pagination-nav__sublabel, 
+    .blog-post-pagination-nav .pagination-nav__link--prev .pagination-nav__sublabel{
+        display: block;
+        position: relative;
+        top: -5rem;
+        font-size: 1.4rem;
     }
 }
